appId: com.ace.sales
---
- launchApp
- tapOn: "Email"
- inputText: "exec@ace.local"
- tapOn: "Password"
- inputText: "${PASSWORD}"
- tapOn: "SIGN IN"
- assertVisible: "OPEN ORDERS"
- tapOn: "PENDING DELIVERIES"
- assertVisible: "Orders"
